--- a/index.html
+++ b/index.html
@@ -2,32 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Vobile Achievement System</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Vobile Achievement Login</title>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
-
-<body class="login-page">
+<body>
   <div class="login-container">
-    <div class="login-bubble">
-      <form class="login-form" action="#" method="POST">
-        <input
-          type="email"
-          name="email"
-          placeholder="Username"
-          class="login-input"
-          required
-        />
-        <input
-          type="password"
-          name="password"
-          placeholder="Password"
-          class="login-input"
-          required
-        />
-        <button type="submit" class="login-button">Sign In</button>
-      </form>
-    </div>
+    <!-- your pre-bubbled artwork -->
+    <img src="images/office-clean.png" alt="Login bubble" class="bubble-artwork"/>
+
+    <!-- form floats on top -->
+    <form class="login-form" action="#" method="post">
+      <input type="text" name="username" placeholder="Username" required />
+      <input type="password" name="password" placeholder="Password" required />
+      <button type="submit">Sign In</button>
+    </form>
   </div>
 </body>
 </html>
