--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 </head>
 <body>
   <div class="login-container">
-    <!-- 
-      This div configures the libraries; 
-      replace data-login_uri with your actual deployed handle_token.html URL 
-    -->
+    <!-- GIS initialization -->
     <div
       id="g_id_onload"
       data-client_id="991409612146-u5ck34qq1kq6sekdcqnk2r32ssk8l1pf.apps.googleusercontent.com"
@@ -20,7 +17,7 @@
       data-auto_prompt="false">
     </div>
 
-    <!-- This is the actual Google Sign-In button -->
+    <!-- Google Sign-In button -->
     <div
       class="g_id_signin"
       data-type="standard"
